Extract/optimize strings